--- a/header.html
+++ b/header.html
@@ -7,21 +7,59 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="css/index.css">
     <script type="text/javascript" src="js/all.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid" style="background-color: blue">
+<nav class="navbar mynavbar">
+    <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Money and Tax</a>
+            <a class="navbar-brand" href="#">Money and Tax </a>
         </div>
-        <ul class="nav navbar-nav navbar " >
-            <li class="active"><a href="#">Loans</a></li>
-            <li><a href="#">Cards</a></li>
-            <li><a href="#">Insurance</a></li>
-            <li><a href="#">Investements</a></li>
-            <li><h4 style=" background-color: blueviolet"> Free Credit Card</h4></li>
-            <li> <i class="far fa-bell"></i></li>
-            <li><h4> login</h4></li>
-            <li> <i class="fas fa-align-justify"></i></li>
+        <ul class="nav navbar-nav">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">LOAN
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Personal Loan</a></li>
+                    <li><a href="#">Home Loan</a></li>
+                    <li><a href="#">Car Loan</a></li>
+                    <li><a href="#">Car Loan</a></li>
+                    <li><a href="#">Two Wheeler Loan</a></li>
+                    <li><a href="#">Used Car Loan</a></li>
+                    <li><a href="#">Educational Loan</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">CREDIT CARD
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Credit Card</a></li>
+                    <li><a href="#">Debit Card</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">INSURANCE
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Term Life Insurance</a></li>
+                    <li><a href="#">Car Insurance</a></li>
+                    <li><a href="#">Health Insurance</a></li>
+                    <li><a href="#">Two Wheeler Insurance</a></li>
+                    <li><a href="#">Traveller Insurance</a></li>
+                    <li><a href="#">Home Insurance</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">INVESTMENT
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Mutual Fund</a></li>
+                    <li><a href="#">Fixed Deposit</a></li>
+                    <li><a href="#">Health Insurance</a></li>
+                    <li><a href="#">Saving Account</a></li>
+                    <li><a href="#">Gold Rate</a></li>
+                </ul>
+            </li>
         </ul>
     </div>
 </nav>
