complete fist page

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         </div>
         <div class="col-md-offset-4 col-md-4  text-center">
             <p>
-                BankBazaar is the world's first neutral online marketplace for instant
+                Money tax is the world's first neutral online marketplace for instant
                 customised rate quotes on loans and credit cards.
                 Shop for loans & cards just like you buy
                 everything else now - online.
