--- a/header.html
+++ b/header.html
@@ -9,11 +9,16 @@
     <script type="text/javascript" src="js/all.js"></script>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <script src="js/jquery.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+
 <body>
 <nav class="navbar mynavbar">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Money and Tax </a>
+            <a class="navbar-brand" style="color: white" href="#">Money and Tax </a>
         </div>
         <ul class="nav navbar-nav">
             <li class="dropdown">
@@ -65,36 +70,271 @@
 </nav>
 <div class="container-fluid">
 <div class="row"
-     style="background-image: url('images/bb-plus/bb-banner-ae.jpg');margin:-24px; babu now going for bath;
+     style="background-image: url('images/bb-plus/bb-banner-ae.jpg');margin:-24px;
       background-size: cover;background-repeat: no-repeat; height: 400px;">
 
 
     <!--<img src="images/bb-plus/bb-banner-ae.jpg" style="width: auto;height: auto">-->
     </div>
-
-
-
-    <nav class="navbar navbar-default">
-        <div class="container-fluid" style="background-color: blue;margin-left: -104px; margin-right: -110px">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#"></a>
-            </div>
-            <ul class="nav navbar-nav navbar " >
-<div class="col-md-6 " style="color: red ;">
-    <i class="fas fa-users text-center" style="height: 25px"></i>
-    23,000,000+ Happy Customers
 </div>
-         <div class="col-md-6" style="color: red;height: 27px">
-             <i class="fas fa-gift text-center" style="height: 23px"></i>
-             Exclusive Offers & Rates
-         </div>
-            </ul>
+<br>
+
+<div class="container-fluid " style="background-color:red ">
+
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-2 mylabel " >
+            <i class="fab fa-cloudscale"></i>
+            50+ Banks
+
         </div>
-    </nav>
+        <div class="col-md-3 mylabel">
+            <i class="fas fa-sync-alt"></i>
+            Paperless Approval
+        </div>
+        <div class="col-md-3 mylabel">
+            <i class="fas fa-user "></i>
+            23,000,000+ Happy Customers
+
+        </div>
+        <div class="col-md-3 mylabel">
+            <i class="fas fa-gift "></i>
+            Exclusive Offers & Rates
+        </div>
+    </div>
+</div>
+
+
+<!--container-->
+
+<div class="container-fluid">
+    <div class="row text-center">
+
+
+        <div class="col-sm-3 myborder">
+            <i class="fas fa-home myicon" ></i>
+            <h4>Home Loan</h4>
+
+        </div>
+        <div class="col-sm-3 myborder">
+            <i class="fas fa-heart myicon"></i>
+            <h4>PersonalLoan</h4>
+
+        </div>
+        <div class="col-sm-3 myborder" >
+            <i class="fas fa-car myicon"></i>
+            <h4>Vechile Loan</h4>
+
+        </div>
+        <div class="col-sm-3 myborder">
+            <i class="fas fa-umbrella myicon"></i>
+            <h4>Life Insurance</h4>
+        </div>
+    </div>
+    <div class="row text-center" style="background-color: #f3f5f5">
+        <div class="col-sm-12" style="margin-top: 20px">
+            <h3>Get your latest Credit Score, FREE</h3>
+            <h5>One powerful number that puts you in control</h5>
+        </div>
+
+    </div>
+
+    <div class="row" style="background-color: #f3f5f5;padding-top: 20px ;border-bottom: 5px solid rgba(193,195,195,0.11)">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-4">
+            <img src="images/5.png" >
+
+        </div>
+        <div class="col-sm-4" style="margin-top:88px" >
+            <ul style="list-style-type:none ">
+                <li> <i class="fas fa-bullseye"></i>
+                    <span style="font-size: 16px;">
+                        Increase chances of application approval
+                    </span>
+                </li>
+                <li> <i class="fas fa-bullseye"></i>
+
+                    <span style="font-size: 16px;"> Better offers </span></li>
+                <li> <i class="fas fa-bullseye"></i>
+                    <span style="font-size: 16px;">Take charge of your finances</span></li>
+
+            </ul>
+
+        </div>
+        <div class="col-sm-2"></div>
+    </div>
+</div>
+</div>
+
+<div class="container-fluid"style="background-color: white">
+    <div class="row">
+        <h4 style="text-align: center"> Trending Products</h4>
+        <h5 style="text-align: center">Our picks for the hottest offers and coolest deals all in one place</h5>
+        <div class="col-sm-4">
+            <img src="images/1.png">
+            <h4>Credit Card</h4>
+
+        </div>
+        <div class="col-sm-4">
+            <img src="images/2.png">
+            <h4>Quick Personal Loan</h4>
+        </div>
+        <div class="col-sm-4">
+            <img src="images/3.png">
+            <h4>Finance Tools</h4>
+
+        </div>
+    </div>
 
 </div>
 </div>
 
+<!--about-->
 
+<div class="container-fluid" id="about-us">
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 text-center">
+            <div class="banner-text" style="margin-top: 100px; ">
+                <span style="color: white; font-size: 40px;">About</span>
+                <span style="color: white; font-size: 40px" >-</span>
+                <span style="color: white; font-size: 40px;"> Contact-us</span>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12 text-center">
+            <h3 style="font-weight: bolder">About-us</h3>
+        </div>
+        <div class="col-md-offset-4 col-md-4  text-center">
+            <p>
+                Money tax is the world's first neutral online marketplace for instant
+                customised rate quotes on loans and credit cards.
+                Shop for loans & cards just like you buy
+                everything else now - online.
+            </p>
+        </div>
+    </div>
+</div>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="owl-carousel owl-theme">
+            <div class="item text-center">
+                <img src="images/slider/1.jpg" alt="" width="200">
+                <h5>Some Text</h5>
+                <p>some paragraph</p>
+            </div>
+            <div class="item text-center">
+                <img src="images/slider/2.jpg" alt="" width="200">
+                <h4>Some Text</h4>
+                <p>some paragraph</p>
+            </div>
+            <div class="item text-center">
+                <img src="images/slider/3.jpg" alt="" width="200">
+                <h4>Some Text</h4>
+                <p>some paragraph</p>
+            </div>
+            <div class="item text-center">
+                <img src="images/slider/4.jpg" alt="" width="200">
+                <h4>Some Text</h4>
+                <p>some paragraph</p>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    jQuery(document).ready(function () {
+        var owl = jQuery('.owl-carousel');
+        owl.owlCarousel({
+            items: 4,
+            loop: true,
+            margin: 10,
+            autoplay: true,
+            autoplayTimeout: 1000,
+            autoplayHoverPause: true
+        });
+        jQuery('.play').on('click', function () {
+            owl.trigger('play.owl.autoplay', [1000])
+        });
+        jQuery('.stop').on('click', function () {
+            owl.trigger('stop.owl.autoplay')
+        });
+    });
+</script>
+
+<!--footer-->
+
+<div class="container-fluid text-center" style="background-color: #3c3b3b;color: white">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-2">Learn More :</div>
+        <div class="col-md-1">Loans</div>
+        <div class="col-md-2">Credit Cards</div>
+        <div class="col-md-1">Investments</div>
+
+    </div>
+</div>
+
+
+<div class="container-fluid" style="background-color:#3c3b3b;color: white;padding-top:40px">
+    <div class="row ">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-3">
+            <h5>Home Loan</h5>
+            <p>ICICI Home Loan</p>
+            <p>SBI Home Loan</p>
+            <p>HDFC Home Loan</p>
+            <p>Axis Home Loan</p>
+
+        </div>
+
+        <div class="col-sm-3">
+            <h5>Personal Loan</h5>
+            <p>ICICI Personal Loan</p>
+            <p>SBI Personal Loan</p>
+            <p>HDFC Personal Loan</p>
+            <p>Axis Personal Loan</p>
+
+        </div>
+        <div class="col-sm-2">
+            <h5>
+                Credit Card
+            </h5>
+            <p>HDFC Credit Card</p>
+            <p>SBI Credit Card</p>
+            <p>Citibank Credit Card</p>
+            <p>American Express Credit Card</p>
+        </div>
+        <div class="col-sm-2">
+            <h5> Insurance</h5>
+            <p>Life Insurance</p>
+            <p>Car Insurance</p>
+            <p>Health Insurance</p>
+        </div>
+
+    </div>
+
+    <div class="row text-center">
+
+        <h5 >
+            Contact Us-
+        </h5>
+        <p>
+            <i class="fas fa-phone"></i>
+            56564632323
+
+        </p>
+        <p><i class="fas fa-envelope-square"></i>  abc@gmail.com</p>
+
+
+        <h6>Copyright    Privacy Policy</h6>
+
+
+    </div>
+
+
+
+</div>
 </body>
-</html>
